# api/refill_station_review_api.go
@@ -11,13 +11,13 @@ import (
 
 // @Summary Show all refill station reviews
 // @Description Get all refill station reviews
-// @Tags refill_station_reviews
-// @Accept  json
-// @Produce  json
+// @Tags Refill Station Reviews
+// @Accept json
+// @Produce json
 // @Success 200 {array} database.RefillStationReview
 // @Router /refill_station_reviews [get]
 func GetRefillStationReviews(c *gin.Context) {
-	idStr := c.Query("id")
+	idStr := c.Param("id")
 	if idStr == "" {
 		var reviews []database.RefillStationReview
 		result := db.Find(&reviews)
@@ -44,12 +44,12 @@ func GetRefillStationReviews(c *gin.Context) {
 
 // @Summary Show all refill station reviews by user ID and station ID
 // @Description Get all refill station reviews by user ID and station ID
-// @Tags refill_station_reviews
-// @Accept  json
-// @Produce  json
+// @Tags Refill Station Reviews
+// @Accept json
+// @Produce json
 // @Param userId path int true "User ID"
 // @Param stationId path int true "Station ID"
-// @Success 200 {array} database.RefillStationReview
+// @Success 200 {object} database.RefillStationReview
 // @Router /refill_station_reviews/{userId}/{stationId} [get]
 func GetRefillStationReviewsByUserId(c *gin.Context) {
 	userIdStr := c.Param("userId")
@@ -66,21 +66,21 @@ func GetRefillStationReviewsByUserId(c *gin.Context) {
 		return
 	}
 
-	var reviews []database.RefillStationReview
-	result := db.Where("user_id = ? AND station_id = ?", userId, stationId).Find(&reviews)
+	var review database.RefillStationReview
+	result := db.Where("user_id = ? AND station_id = ?", userId, stationId).Find(&review)
 	if result.Error != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": result.Error.Error()})
 		return
 	}
 
-	c.JSON(http.StatusOK, reviews)
+	c.JSON(http.StatusOK, review)
 }
 
 // @Summary Create a refill station review
 // @Description Create a new refill station review
-// @Tags refill_station_reviews
-// @Accept  json
-// @Produce  json
+// @Tags Refill Station Reviews
+// @Accept json
+// @Produce json
 // @Param review body database.RefillStationReview true "Refill Station Review"
 // @Success 201 {object} database.RefillStationReview
 // @Router /refill_station_reviews [post]
@@ -119,37 +119,41 @@ func CreateRefillStationReview(c *gin.Context) {
 
 // @Summary Update a refill station review
 // @Description Update an existing refill station review
-// @Tags refill_station_reviews
-// @Accept  json
-// @Produce  json
+// @Tags Refill Station Reviews
+// @Accept json
+// @Produce json
 // @Param review body database.RefillStationReview true "Refill Station Review"
 // @Success 200 {object} database.RefillStationReview
 // @Router /refill_station_reviews [put]
 func UpdateRefillStationReview(c *gin.Context) {
-	var review database.RefillStationReview
-	if err := c.ShouldBindJSON(&review); err != nil {
+	var requestReview database.RefillStationReview
+	if err := c.ShouldBindJSON(&requestReview); err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
-	review.Timestamp = time.Now()
-	result := db.Save(&review)
-	if result.Error != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": result.Error.Error()})
+
+	var review database.RefillStationReview
+	if err := db.Where("id = ?", requestReview.ID).First(&review).Error; err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Record not found!"})
 		return
 	}
-	c.JSON(http.StatusOK, review)
+	requestReview.Timestamp = time.Now()
+
+	db.Model(&review).Updates(requestReview)
+
+	c.JSON(http.StatusOK, requestReview)
 }
 
 // @Summary Delete a refill station review
 // @Description Delete an existing refill station review
-// @Tags refill_station_reviews
-// @Accept  json
-// @Produce  json
-// @Param id query int true "Refill Station Review ID"
+// @Tags Refill Station Reviews
+// @Accept json
+// @Produce json
+// @Param id path int true "Refill Station Review ID"
 // @Success 204
-// @Router /refill_station_reviews [delete]
+// @Router /refill_station_reviews/:id [delete]
 func DeleteRefillStationReview(c *gin.Context) {
-	idStr := c.Query("id")
+	idStr := c.Param("id")
 	if idStr == "" {
 		c.JSON(http.StatusBadRequest, gin.H{"error": "ID is required"})
 		return
@@ -159,7 +163,15 @@ func DeleteRefillStationReview(c *gin.Context) {
 		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid ID"})
 		return
 	}
-	result := db.Delete(&database.RefillStationReview{}, id)
+
+	// Check for record not found error
+	var tempReview database.RefillStationReview
+	result := db.First(&tempReview, id)
+	if result.Error != nil {
+		c.JSON(http.StatusNotFound, gin.H{"error": "Review with ID not found"})
+	}
+
+	result = db.Delete(&database.RefillStationReview{}, id)
 	if result.Error != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": result.Error.Error()})
 		return
