# docs/swagger.yaml
@@ -605,24 +605,6 @@ paths:
       tags:
       - Refill Station Problems
   /refill_station_reviews:
-    delete:
-      consumes:
-      - application/json
-      description: Delete an existing refill station review
-      parameters:
-      - description: Refill Station Review ID
-        in: query
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "204":
-          description: No Content
-      summary: Delete a refill station review
-      tags:
-      - refill_station_reviews
     get:
       consumes:
       - application/json
@@ -638,7 +620,7 @@ paths:
             type: array
       summary: Show all refill station reviews
       tags:
-      - refill_station_reviews
+      - Refill Station Reviews
     post:
       consumes:
       - application/json
@@ -659,7 +641,7 @@ paths:
             $ref: '#/definitions/database.RefillStationReview'
       summary: Create a refill station review
       tags:
-      - refill_station_reviews
+      - Refill Station Reviews
     put:
       consumes:
       - application/json
@@ -680,7 +662,26 @@ paths:
             $ref: '#/definitions/database.RefillStationReview'
       summary: Update a refill station review
       tags:
-      - refill_station_reviews
+      - Refill Station Reviews
+  /refill_station_reviews/:id:
+    delete:
+      consumes:
+      - application/json
+      description: Delete an existing refill station review
+      parameters:
+      - description: Refill Station Review ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: No Content
+      summary: Delete a refill station review
+      tags:
+      - Refill Station Reviews
   /refill_station_reviews/{userId}/{stationId}:
     get:
       consumes:
@@ -703,12 +704,10 @@ paths:
         "200":
           description: OK
           schema:
-            items:
-              $ref: '#/definitions/database.RefillStationReview'
-            type: array
+            $ref: '#/definitions/database.RefillStationReview'
       summary: Show all refill station reviews by user ID and station ID
       tags:
-      - refill_station_reviews
+      - Refill Station Reviews
   /refill_stations:
     get:
       consumes:
